Let users put comments on devices

--- a/html/settings/devices/index.css
+++ b/html/settings/devices/index.css
@@ -5,14 +5,15 @@ table.Devices, .Devices thead, .Devices tbody, .Devices tr, .Devices td, .Device
   border-style: solid;
 }
 
-.Devices tbody:nth-child(odd) { background-color: #e7f3ff; }
-.Devices tbody:nth-child(even) { background-color: #cee7ff; }
+.Devices thead { background-color: #aaaaaa; }
+
+.Devices tbody:nth-child(odd), .Devices tbody:nth-child(odd) input { background-color: #dddddd; }
+.Devices tbody:nth-child(even), .Devices tbody:nth-child(even) input { background-color: #f0f0f0; }
 
 .Devices td, .Devices th { padding: .4ex; }
 .Devices .Created, .Devices .LastSeen, .Devices .LastWrite { text-align: right; }
 .Devices .Hardware { text-align: center; }
 .Devices .RemoteAddr { text-align: left; }  /* Have all the 192.168s line up. */
-.Devices .Blank { border-style: dotted; }
 
 /* Hide LastSeen for a device if it has active clients. */
 .Devices tbody tr:first-child:not(:only-child) .LastSeen { font-size: 0;}
