--- a/html/settings/devices/index.css
+++ b/html/settings/devices/index.css
@@ -12,7 +12,7 @@ table.Devices, .Devices thead, .Devices tbody, .Devices tr, .Devices td, .Device
 
 .Devices td, .Devices th { padding: .4ex; }
 .Devices .Created, .Devices .LastSeen, .Devices .LastWrite { text-align: right; }
-.Devices .Hardware { text-align: center; }
+.Devices .Platform { text-align: center; }
 .Devices .RemoteAddr { text-align: left; }  /* Have all the 192.168s line up. */
 
 /* Hide LastSeen for a device if it has active clients. */
