--- a/html/settings/devices/index.css
+++ b/html/settings/devices/index.css
@@ -10,16 +10,15 @@ table.Devices, .Devices thead, .Devices tbody, .Devices tr, .Devices td, .Device
 .Devices tbody:nth-child(odd), .Devices tbody:nth-child(odd) input { background-color: #dddddd; }
 .Devices tbody:nth-child(even), .Devices tbody:nth-child(even) input { background-color: #f0f0f0; }
 
+.Devices tbody.HasClients:nth-child(odd) { background-color: #adddad; }
+.Devices tbody.HasClients:nth-child(even) { background-color: #d0f0d0; }
+
 .Devices td, .Devices th { padding: .4ex; }
-.Devices .Created, .Devices .LastSeen, .Devices .LastWrite { text-align: right; }
+.Devices .Created, .Devices .LastSeenActive, .Devices .LastSeenInactive, .Devices .LastWrite { text-align: right; }
 .Devices .Platform { text-align: center; }
 .Devices .RemoteAddr { text-align: left; }  /* Have all the 192.168s line up. */
 
 /* Hide LastSeen for a device if it has active clients. */
-.Devices tbody tr:first-child:not(:only-child) .LastSeen { font-size: 0;}
-.Devices tbody tr:first-child:not(:only-child) .LastSeen:before {
-  content: "0s";
-  font-size: initial;
-  padding: .4ex;
-}
+.Devices tbody.HasClients .LastSeenInactive { display: none; }
+.Devices tbody:not(.HasClients) .LastSeenActive { display: none; }
 
