Update Jammer name on jam start
This fixes a problem where Jammer names would sometimes not be
displayed.

--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -25,7 +25,7 @@
 				<div class="DotOfficialReviews Box">
 					<div class="Dot OfficialReview1"></div>
 				</div>
-				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div>
+				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
 			</div>
 
 			<div class="Team Team2 Right" sbContext="Team(2)">
@@ -41,7 +41,7 @@
 				<div class="DotOfficialReviews Box">
 					<div class="Dot OfficialReview1"></div>
 				</div>
-				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div>
+				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
 			</div>
 
 			<!-- Jam In Progress -->
