--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -32,24 +32,25 @@
 					</div>
 					<div class="JammerWrapper">
 						<div class="JammerBox ShowInJam Clock ColourTeam1">
-							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div>
+							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
 						</div>
 					</div>
-					</div>
-					<div class="Team2" sbContext="Team(2)">
-						<div class="Team Row Wrapper barBackgroundBottom">
-							<div class="Indicator ColourTeam2 Box">&nbsp;</div>
-							<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
-							<div class="Score Box" sbDisplay="Score"></div>
-							<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
-							<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
-						</div>
-						<div class="JammerWrapper">
-							<div class="JammerBox ShowInJam Clock ColourTeam2"><div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
-						</div>
-					</div>
-			
 				</div>
+				<div class="Team2" sbContext="Team(2)">
+					<div class="Team Row Wrapper barBackgroundBottom">
+						<div class="Indicator ColourTeam2 Box">&nbsp;</div>
+						<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
+						<div class="Score Box" sbDisplay="Score"></div>
+						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
+						<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
+					</div>
+					<div class="JammerWrapper">
+						<div class="JammerBox ShowInJam Clock ColourTeam2">
+							<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 			
 			<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Clock)"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
