Fix overlay points-per-jam header and roster logo size

--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -82,8 +82,8 @@
 						</div>
 				</div>
 
-				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel">
-					<h1 class="NoLogo">Points Per Jam</h1>
+				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel NoLogo">
+					<h1>Points Per Jam</h1>
 					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
 					<div class="PPJContainer Wrapper">
 						<div class="Wrapper Team Team1">
