--- a/html/views/overlay/index.css
+++ b/html/views/overlay/index.css
@@ -239,6 +239,9 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .RosterTeam .Team .Skater:nth-last-child(1) .Number, .RosterTeam .Team .Skater:nth-last-child(2) .Number,
 .RosterTeam .Team .Skater:nth-last-child(1), .RosterTeam .Team .Skater:nth-last-child(2) { border-radius: 0 0 10px 10px; }
 
+.PenaltyTeam .SortBox { border-radius: 10px; }
+.PenaltyTeam .NoShow { display: none; }
+
 .PenaltyTeam .Team .Skater { width: 100%; font-size: 1.2em; line-height: 1.4em; height: 1.4em; }
 .PenaltyTeam .Team .Skater:nth-child(odd)  {  background: #ccc; }
 .PenaltyTeam .Team .Skater:nth-child(even) {  background: #ddd; }
@@ -247,8 +250,6 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .PenaltyTeam .Team .Name { float: left; width: 24%; color: #333; }
 .PenaltyTeam .Team .Penalty { float: left; width: 8%; }
 
-.PenaltyTeam .Skater:nth-child(1) { border-radius: 10px 10px 0 0; }
-.PenaltyTeam .Skater:nth-last-child(1) { border-radius: 0 0 10px 10px; }
 .PenaltyTeam .Skater { clear: both; }
 .PenaltyTeam .Skater .Penalty { display: block; padding: 0px 2px; background: #333; color: white; width: 2em; border-radius: 8px; text-align: center; margin-right: 10px;}
 
