--- a/html/views/overlay/index.css
+++ b/html/views/overlay/index.css
@@ -132,7 +132,10 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .TeamBox .JammerBox			{ float: left; -webkit-transition: margin-left 2s; }
 
 .TeamBox .Team				    { width: 50%; }
-.TeamBox .JammerWrapper		{ width: 40%; overflow: none; position: relative; }
+
+.JammerNameBox		{ width: 40%}
+
+.TeamBox .JammerWrapper		{ overflow: none; position: relative; }
 
 .TeamBox .JammerBox			{ width: 100%; }
 
@@ -141,7 +144,8 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 
 .TeamBox .Team .Indicator		{ width: .5em; height: 100%; }
 .TeamBox .JammerBox .JammerName		{ font-size: 50%; margin-left: 1vw; height: 100%; }
-
+.Starpass { font-size: 50%; text-align: center; width: 2.2vw; float: left;}
+.JammerNameBox .StarPass { background: #333; color: white;}
 .TeamBox .Team      { border-right: 2px solid #333; }
 
 .TeamBox .Team1	.Team			{ border-radius: 8px 8px 0 0; }
@@ -151,8 +155,14 @@ html > body div.Wrapper .FloatRight 	{ float: right !important; right: 0; }
 .TeamBox .Team2 .JammerBox		{ border-radius: 0 8px 8px 0; }
 
 .TeamBox .Team1.HasJammerName .Team	{ border-radius: 8px 0 0 0; }
+.TeamBox .Team1.IsStarPass .Team { border-radius: 8px 0 0 0; }
+.TeamBox .Team1.HasJammerName .Starpass	{ border-radius: 0 0.1px 0 0; }
 .TeamBox .Team2.HasJammerName .Team	{ border-radius: 0 0 0 8px; }
+.TeamBox .Team2.IsStarPass .Team	{ border-radius: 0 0 0 8px; }
+.TeamBox .Team2.HasJammerName .Starpass	{ border-radius: 0 0.1px 0 0; }
 
+.Team1 .Starpass{ border-radius: 0 8px 0px 0; }
+.Team2 .Starpass{ border-radius: 0 0px 8px 0; }
 
 .ShowJammers[Clock="Jam"] .TeamBox .Team1 .Team { border-radius: 8px 0 0 0; }
 .ShowJammers[Clock="Jam"] .TeamBox .Team2 .Team { border-radius: 0 0 0 8px; }
@@ -317,4 +327,3 @@ div.PanelWrapperTop    .AnimatedPanel.PanelHideTop.show	{ -webkit-transform: tra
 .PanelWrapperCenter .PenaltyTeam.AnimatedPanel.LowerPart { margin-top: 9em; }
 
 div.AnimatedPanel.AnimationDelay { -webkit-transition: -webkit-transform 1s ease-in-out .3s; }
-
