--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -15,9 +15,9 @@
 
 			<div class="PanelWrapperTop">
 
-				<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Score)" class="TeamBox AnimatedPanel PanelHideTop Wrapper">	
-					<div class="Team1" sbContext="Team(1)">	
-					<div class="Team Row Wrapper barBackgroundTop"> 
+				<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Score)" class="TeamBox AnimatedPanel PanelHideTop Wrapper">
+					<div class="Team1" sbContext="Team(1)">
+					<div class="Team Row Wrapper barBackgroundTop">
 						<div class="Indicator ColourTeam1 Box">&nbsp;</div>
 						<div class="Name  VerticalCenter Box" sbDisplay="AlternateName(overlay),Name"></div>
 						<div class="Score VerticalCenter Box" sbDisplay="Score"></div>
@@ -30,9 +30,12 @@
 							<div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
 						</div>
 					</div>
-					<div class="JammerWrapper">
-						<div class="JammerBox ShowInJam Clock ColourTeam1">
-							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+					<div class="JammerNameBox">
+						<div class="ShowInJam StarPass ColourTeam1" sbdisplay="StarPass" sbmodify="toSP"></div>
+						<div class="JammerWrapper">
+							<div class="JammerBox ShowInJam Clock ColourTeam1">
+								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -44,15 +47,18 @@
 						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
 						<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
 					</div>
-					<div class="JammerWrapper">
-						<div class="JammerBox ShowInJam Clock ColourTeam2">
-							<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+					<div class="JammerNameBox">
+						<div class="ShowInJam StarPass ColourTeam2" sbdisplay="StarPass" sbmodify="toSP"></div>
+						<div class="JammerWrapper">
+							<div class="JammerBox ShowInJam Clock ColourTeam2">
+								<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			
+
 			<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Clock)"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
 
 					<div class="ClockBarTop Wrapper Row SlideDown ClockNames ShowInJam ShowInLineup ShowInTimeout barBackgroundTop">
@@ -71,7 +77,7 @@
 
 			</div>
 
-			</div>	
+			</div>
 
 			<div class="PanelWrapperCenter">
 
@@ -84,7 +90,7 @@
 
 				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<h1>Points Per Jam</h1>
-					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>	
+					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>
 					<div class="PPJContainer Wrapper">
 						<div class="Wrapper Team Team1">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
@@ -92,7 +98,7 @@
 						<div class="Wrapper Team Team2">
 							<div class="Period Period1"></div><div class="Period Period2"></div>
 						</div> </div>
-					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>	
+					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>
 				</div>
 
 
@@ -108,7 +114,7 @@
 
 				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo2" src="" />
-					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>	
+					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>
 					<h2>Team Roster</h2>
 				</div>
 				<div class="RosterTeam2 RosterTeam LowerPart AnimationDelay PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
@@ -119,7 +125,7 @@
 				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1>Penalty Board</h1>
-					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>	
+					<h2 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h2>
 				</div>
 				<div class="PenaltyTeam1 PenaltyTeam AnimationDelay LowerPart PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team1 SortBox">
@@ -129,7 +135,7 @@
 				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1>Penalty Board</h1>
-					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>	
+					<h2 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h2>
 				</div>
 				<div class="PenaltyTeam2 PenaltyTeam AnimationDelay LowerPart PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div class="Wrapper Team Team2 SortBox">
@@ -139,12 +145,12 @@
 				<div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div>
 						<img class="TeamLogo TeamLogo1" src="" style="float: left;" />
-						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>	
+						<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)" style="margin-top: 2em; margin-left: 4em; margin-right: 0;"></h1>
 					</div>
 					<div class="UpcomingVS">VS</div>
 					<div>
 						<img class="TeamLogo TeamLogo2" src="" style="float: right;" />
-						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>	
+						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>
 					</div>
 				</div>
 
@@ -158,4 +164,3 @@
 
 	</div>
 </html>
-
