Make it easier to understand&handle there being points on initial.
Viewing trip 2 now also includes the initial's score, and a button
to insert before trip 1. This is as it's not obvious that the NI column
is the initial trip button.

--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -42,5 +42,6 @@ body:not(.AllowSelect) .SK {
 #TripEditor .buttons td { text-align: center; }
 #TripEditor .ui-button { font-size: 75%; }
 #TripEditor .ui-button.checked { background: #3f3; }
+#TripEditor .Hide { display: none; }
 
 #skaterSelector .Hide { display: none; }
