--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -17,21 +17,21 @@
 
 				<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Score)" class="TeamBox AnimatedPanel PanelHideTop Wrapper">
 					<div class="Team1" sbContext="Team(1)">
-					<div class="Team Row Wrapper barBackgroundTop">
-						<div class="Indicator ColourTeam1 Box">&nbsp;</div>
+						<div class="Indicator ColourTeam1 barBackgroundTop Box">
+							<div class="LeadJammer Lead ">&#9733;</div>
+							<div class="ShowInJam StarPass " sbdisplay="StarPass" sbmodify="toSP">&nbsp;</div>
+						</div>
+					<div class="Team Row barBackgroundTop">
 						<div class="Name  VerticalCenter Box" sbDisplay="AlternateName(overlay),Name"></div>
 						<div class="Score VerticalCenter Box" sbDisplay="Score"></div>
 						<div class="Mini Box">
 							<div class="JamScore" sbDisplay="JamScore"></div>
-							<div class="LeadJammer Lead">&#9733;</div>
 						</div>
 						<div class="DotTimeouts Box">
-							<div class="Dot Timeout1"></div><div class="Dot Timeout2"></div>
-							<div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
+							<div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
 						</div>
 					</div>
 					<div class="JammerNameBox">
-						<div class="ShowInJam StarPass ColourTeam1" sbdisplay="StarPass" sbmodify="toSP"></div>
 						<div class="JammerWrapper">
 							<div class="JammerBox ShowInJam Clock ColourTeam1">
 								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
@@ -40,15 +40,17 @@
 					</div>
 				</div>
 				<div class="Team2" sbContext="Team(2)">
-					<div class="Team Row Wrapper barBackgroundBottom">
-						<div class="Indicator ColourTeam2 Box">&nbsp;</div>
+					<div class=" Indicator ColourTeam2 barBackgroundBottom Box">
+						<div class="LeadJammer Lead ">&#9733;</div>
+						<div class="ShowInJam StarPass " style="" sbdisplay="StarPass" sbmodify="toSP"></div>
+					</div>
+					<div class="Team Row barBackgroundBottom">
 						<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
 						<div class="Score Box" sbDisplay="Score"></div>
-						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div><div class="LeadJammer Lead">&#9733;</div></div>
+						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div></div>
 						<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
 					</div>
 					<div class="JammerNameBox">
-						<div class="ShowInJam StarPass ColourTeam2" sbdisplay="StarPass" sbmodify="toSP"></div>
 						<div class="JammerWrapper">
 							<div class="JammerBox ShowInJam Clock ColourTeam2">
 								<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
