--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -19,7 +19,7 @@
 					<div class="Team1" sbContext="Team(1)">
 						<div class="Indicator ColourTeam1 barBackgroundTop Box">
 							<div class="LeadJammer Lead ">&#9733;</div>
-							<div class="ShowInJam StarPass " sbdisplay="StarPass" sbmodify="toSP">&nbsp;</div>
+							<div class="ShowInJam" sbdisplay="StarPass" sbmodify="toSP">&nbsp;</div>
 						</div>
 					<div class="Team Row barBackgroundTop">
 						<div class="Name  VerticalCenter Box" sbDisplay="AlternateName(overlay),Name"></div>
@@ -42,7 +42,7 @@
 				<div class="Team2" sbContext="Team(2)">
 					<div class=" Indicator ColourTeam2 barBackgroundBottom Box">
 						<div class="LeadJammer Lead ">&#9733;</div>
-						<div class="ShowInJam StarPass " style="" sbdisplay="StarPass" sbmodify="toSP"></div>
+						<div class="ShowInJam" style="" sbdisplay="StarPass" sbmodify="toSP"></div>
 					</div>
 					<div class="Team Row barBackgroundBottom">
 						<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
