--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -44,3 +44,6 @@ body:not(.AllowSelect) .SK {
 #TripEditor .ui-button.checked { background: #3f3; }
 
 #skaterSelector .Hide { display: none; }
+
+.SK.Period .noTripAlert { position: relative; }
+.SK.Period .noTripAlert::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; }
