--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -31,13 +31,13 @@
 							<div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
 						</div>
 					</div>
-					<div class="JammerNameBox">
+
 						<div class="JammerWrapper">
 							<div class="JammerBox ShowInJam Clock ColourTeam1">
-								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
 							</div>
 						</div>
-					</div>
+
 				</div>
 				<div class="Team2" sbContext="Team(2)">
 					<div class=" Indicator ColourTeam2 barBackgroundBottom Box">
@@ -50,13 +50,13 @@
 						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div></div>
 						<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
 					</div>
-					<div class="JammerNameBox">
+
 						<div class="JammerWrapper">
 							<div class="JammerBox ShowInJam Clock ColourTeam2">
-								<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+								<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
 							</div>
 						</div>
-					</div>
+			
 				</div>
 			</div>
 
