--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -34,7 +34,7 @@
 
 						<div class="JammerWrapper">
 							<div class="JammerBox ShowInJam Clock ColourTeam1">
-								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
+								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
 							</div>
 						</div>
 
@@ -53,10 +53,10 @@
 
 						<div class="JammerWrapper">
 							<div class="JammerBox ShowInJam Clock ColourTeam2">
-								<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
+								<div class="JammerName" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
 							</div>
 						</div>
-			
+
 				</div>
 			</div>
 
