--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -33,7 +33,7 @@
 					</div>
 					<div class="JammerWrapper">
 						<div class="JammerBox ShowInJam Clock ColourTeam1">
-							<div id="jammer1" class="JammerName VerticalCenter Box"></div>
+							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
 						</div>
 					</div>
 				</div>
@@ -50,7 +50,7 @@
 					</div>
 					<div class="JammerWrapper">
 						<div class="JammerBox ShowInJam Clock ColourTeam2">
-							<div id="jammer2" class="JammerName"></div>
+							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
 						</div>
 					</div>
 				</div>
