--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -36,11 +36,23 @@ body:not(.AllowSelect) .SK {
 .SK.Period .Trip, .Period .JamTotal, .Period .GameTotal { width: 9%; }
 .SK.Period .GameTotal, .SK.Period .JamTotal,.SK.Period .Lost, .SK.Period .Trip2 { border-left-width: 2px; }
 .SK.Period .GameTotal { background-color: #d3ecb6; }
+.SK.Period .hasAnnotation { position: relative; }
+.SK.Period .hasAnnotation::after { position: absolute; right: 2px; top: 2px; height: 5px; width: 5px; background-color: red; content: ""; }
 
 #TripEditor input[type="number"] { width: 50px; }
-#TripEditor td { padding-bottom: 0.5em; }
-#TripEditor .buttons td { text-align: center; }
+#TripEditor table { width: 100%; }
+#TripEditor td { padding: 0.25em; text-align: center; width: 33%; background: #ccc; }
+#TripEditor .header { font-weight: bold; }
+#TripEditor .Annotation.read>td { text-align: left; padding: 0.5em; }
+#TripEditor .Annotation.head>td { border-top: 2px solid white; }
+#TripEditor .Annotation.head>td:first-of-type { border-radius: 12px 0px 0px 0px; }
+#TripEditor .Annotation.head>td:last-of-type { border-radius: 0px 12px 0px 0px; }
+#TripEditor .Annotation.edit>td { border-radius: 0px 0px 12px 12px; border-bottom: 2px solid white; }
+#TripEditor .Annotation.read>td { border-radius: 0px 0px 12px 12px; border-bottom: 2px solid white; }
+#TripEditor tr:not(.Annotation)>td:first-of-type { border-radius: 12px 0px 0px 12px; }
+#TripEditor tr:not(.Annotation)>td:last-of-type { border-radius: 0px 12px 12px 0px; }
 #TripEditor .ui-button { font-size: 75%; }
 #TripEditor .ui-button.checked { background: #3f3; }
+#TripEditor .Hide { display: none; }
 
 #skaterSelector .Hide { display: none; }
