--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -42,9 +42,8 @@ body:not(.AllowSelect) .SK {
 #TripEditor input[type="number"] { width: 50px; }
 #TripEditor table { width: 100%; }
 #TripEditor td { padding: 0.25em; text-align: center; width: 33%; }
+#TripEditor td.close { text-align: right; }
 #TripEditor .header { font-weight: bold; }
-#TripEditor .Annotation.read>td { text-align: left; }
-#TripEditor .close>td { text-align: right; }
 #TripEditor .ui-button { font-size: 75%; }
 #TripEditor .ui-button.checked { background: #3f3; }
 #TripEditor .Hide { display: none; }
