Stop navigation buttons from moving around
also don't swallow leading '0 + 's from Trip 10

--- a/html/components/sk-sheet.css
+++ b/html/components/sk-sheet.css
@@ -47,5 +47,6 @@ body:not(.AllowSelect) .SK {
 #TripEditor .ui-button { font-size: 75%; }
 #TripEditor .ui-button.checked { background: #3f3; }
 #TripEditor .Hide { display: none; }
+#TripEditor .Invisible { visibility: hidden; }
 
 #skaterSelector .Hide { display: none; }
