--- a/html/components/team-time-tab.css
+++ b/html/components/team-time-tab.css
@@ -102,4 +102,8 @@ div.NumberDialog table { text-align: center; }
 	div.GameControl div.section:not(:last-of-type) { padding-bottom: 10px; border-bottom: solid 1px black; }
 	div.GameControl .header { font-weight: bold; }
 	div.GameControl button span { font-size: 50%; }
+	div.GameControl td>input { width: 50px; }
+	div.GameControl .rowLabel { text-align: right; }
+	div.GameControl .colLabel { text-align: center; }
+	div.GameControl .Hide { display: none; }
 /* End Game Control Dialog */
