--- a/html/components/team-time-tab.css
+++ b/html/components/team-time-tab.css
@@ -38,8 +38,8 @@
 #TeamTime table.Team tr.Name td.Name div a.AlternateName { display: none; }
 #TeamTime table.Team tr.Name td.Logo img { height: 50px; vertical-align: middle; }
 #TeamTime table.Team tr.Score td.Score a { font-size: 300%; }
-#TeamTime table.Team tr.Score td a.TripScore { font-size: 200%; line-height: 175%; }
-#TeamTime table.Team tr.Score td a.JamScore { font-size: 200%; line-height: 175%; }
+#TeamTime table.Team tr.Score td a.TripScore { font-size: 150%; }
+#TeamTime table.Team tr.Score td a.JamScore { font-size: 150%; }
 #TeamTime table.Team tr.Timeout td.Timeouts a { font-size: 200%; }
 #TeamTime table.Team tr.Timeout td.OfficialReviews a { font-size: 200%; }
 #TeamTime table.Team tr.Timeout td.OfficialTimeout { position: relative; }
