--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -47,7 +47,7 @@
 						<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
 						<div class="Score Box" sbDisplay="Score"></div>
 						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div></div>
-						<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
+						<div class="DotTimeouts Box"><div class="Dot OfficialReview1"></div><div class="Dot Timeout3"></div><div class="Dot Timeout2"></div><div class="Dot Timeout1"></div></div>
 					</div>
 					<div class="JammerWrapper">
 						<div class="JammerBox ShowInJam Clock ColourTeam2">
