--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -17,7 +17,7 @@
 				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
-				<div class="JamScore Box AutoFit" sbDisplay="JamScore,NoInitial" sbModify="toJamScore"></div>
+				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
 				<div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
 				<div class="DotTimeouts Box">
 					<div class="Dot Timeout1"></div>
@@ -34,7 +34,7 @@
 				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
-				<div class="JamScore Box AutoFit" sbDisplay="JamScore,NoInitial" sbModify="toJamScore"></div>
+				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
 				<div class="ShowInJam StarPass AutoFit" sbDisplay="StarPass" sbModify="toSP"></div>
 				<div class="DotTimeouts Box">
 					<div class="Dot Timeout1"></div>
