--- a/html/views/overlay/stats.html
+++ b/html/views/overlay/stats.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="statengine.js"></script>
 	</head>
 	<body>
-		Stats Framework Test
+		Stats Framework Test - This is unmaintained and likely broken
 
 		<table id="Jams">
 		<thead>
