--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -12,7 +12,7 @@
 		<div class="DisplayPane" id="video"><video class="object" onended="this.play();"></video></div>
 		<div class="DisplayPane" id="html"><iframe class="object"></iframe></div>
 		<div class="DisplayPane" id="whiteboard"><iframe class="object" src="../wb/"></iframe></div>
-		<div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard" class="JamScore">
+		<div class="DisplayPane Show" id="scoreboard" sbContext="ScoreBoard.CurrentGame" class="JamScore">
 			<div class="Team Team1 Left" sbContext="Team(1)">
 				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="AlternateName(scoreboard),Name"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
@@ -27,7 +27,7 @@
 				<div class="DotOfficialReviews Box">
 					<div class="Dot OfficialReview1"></div>
 				</div>
-				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam" sbModify="jammer"></div>
 			</div>
 
 			<div class="Team Team2 Right" sbContext="Team(2)">
@@ -44,7 +44,7 @@
 				<div class="DotOfficialReviews Box">
 					<div class="Dot OfficialReview1"></div>
 				</div>
-				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer"></div>
+				<div class="ShowInJam Clock Lead AutoFit" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam" sbModify="jammer"></div>
 			</div>
 
 			<!-- Jam In Progress -->
@@ -86,7 +86,7 @@
 
 			<!-- Intermission -->
 			<div class="ShowInIntermission Clock Intermission">
-				<div class="Message Box AutoFit" sbDisplay="Settings.Setting(ScoreBoard.Intermission.PreGame), Settings.Setting(ScoreBoard.Intermission.Intermission), Settings.Setting(ScoreBoard.Intermission.Unofficial), Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rulesets.CurrentRule(Period.Number)" sbModify="intermissionDisplay"></div>
+				<div class="Message Box AutoFit" sbDisplay="/ScoreBoard.Settings.Setting(ScoreBoard.Intermission.PreGame), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Intermission), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Unofficial), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rule(Period.Number)" sbModify="intermissionDisplay"></div>
 				<div class="Time Box AutoFit" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
 			</div>
 		</div>
