--- a/html/views/overlay/index.html
+++ b/html/views/overlay/index.html
@@ -10,83 +10,83 @@
 	</head>
 	<body class="preload">
 
-    <div id="logo"></div>
-
-		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowJammers)">
-
+	    <div id="logo"></div>
+	
+		<div id="sb" sbContext="ScoreBoard.CurrentGame" class="JamScore StyleTraditional" data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.ShowJammers)">
+	
 			<div class="PanelWrapperTop">
-
+	
 				<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Score)" class="TeamBox AnimatedPanel PanelHideTop Wrapper">
 					<div class="Team1" sbContext="Team(1)">
 						<div class="Indicator ColourTeam1 barBackgroundTop Box">
 							<div class="LeadJammer Lead ">&#9733;</div>
 							<div class="ShowInJam" sbdisplay="StarPass" sbmodify="toSP">&nbsp;</div>
 						</div>
-					<div class="Team Row barBackgroundTop">
-						<div class="Name  VerticalCenter Box" sbDisplay="AlternateName(overlay),Name"></div>
-						<div class="Score VerticalCenter Box" sbDisplay="Score"></div>
-						<div class="Mini Box">
-							<div class="JamScore" sbDisplay="JamScore"></div>
+						<div class="Team Row barBackgroundTop">
+							<div class="Name  VerticalCenter Box" sbDisplay="AlternateName(overlay),Name"></div>
+							<div class="Score VerticalCenter Box" sbDisplay="Score"></div>
+							<div class="Mini Box">
+								<div class="JamScore" sbDisplay="JamScore"></div>
+							</div>
+							<div class="DotTimeouts Box">
+								<div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
+							</div>
 						</div>
-						<div class="DotTimeouts Box">
-							<div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div>
+						<div class="JammerWrapper">
+							<div class="JammerBox ShowInJam Clock ColourTeam1">
+								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam" sbModify="jammer_ov"></div>
+							</div>
 						</div>
 					</div>
-					<div class="JammerWrapper">
-						<div class="JammerBox ShowInJam Clock ColourTeam1">
-							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
+					<div class="Team2" sbContext="Team(2)">
+						<div class=" Indicator ColourTeam2 barBackgroundBottom Box">
+							<div class="LeadJammer Lead ">&#9733;</div>
+							<div class="ShowInJam" style="" sbdisplay="StarPass" sbmodify="toSP"></div>
+						</div>
+						<div class="Team Row barBackgroundBottom">
+							<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
+							<div class="Score Box" sbDisplay="Score"></div>
+							<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div></div>
+							<div class="DotTimeouts Box"><div class="Dot OfficialReview1"></div><div class="Dot Timeout3"></div><div class="Dot Timeout2"></div><div class="Dot Timeout1"></div></div>
+						</div>
+						<div class="JammerWrapper">
+							<div class="JammerBox ShowInJam Clock ColourTeam2">
+								<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.CurrentGame.InJam" sbModify="jammer_ov"></div>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="Team2" sbContext="Team(2)">
-					<div class=" Indicator ColourTeam2 barBackgroundBottom Box">
-						<div class="LeadJammer Lead ">&#9733;</div>
-						<div class="ShowInJam" style="" sbdisplay="StarPass" sbmodify="toSP"></div>
-					</div>
-					<div class="Team Row barBackgroundBottom">
-						<div class="Name Box" sbDisplay="AlternateName(overlay),Name"></div>
-						<div class="Score Box" sbDisplay="Score"></div>
-						<div class="Mini Box"><div class="JamScore" sbDisplay="JamScore"></div></div>
-						<div class="DotTimeouts Box"><div class="Dot OfficialReview1"></div><div class="Dot Timeout3"></div><div class="Dot Timeout2"></div><div class="Dot Timeout1"></div></div>
-					</div>
-					<div class="JammerWrapper">
-						<div class="JammerBox ShowInJam Clock ColourTeam2">
-							<div class="JammerName VerticalCenter Box" sbDisplay="DisplayLead,StarPass,Position(Jammer).Name,Position(Pivot).Name,/ScoreBoard.InJam" sbModify="jammer_ov"></div>
+	
+	
+				<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Clock)"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
+	
+						<div class="ClockBarTop Wrapper Row SlideDown ClockNames ShowInJam ShowInLineup ShowInTimeout barBackgroundTop">
+							<div class="Box TextLeft Name" sbDisplay="Name,Number" sbContext="Clock(Period)" sbModify="toClockInitialNumber"></div>
+							<div class="Box TextRight Name" sbDisplay="Name,Number" sbContext="Clock(Jam)" sbModify="toClockInitialNumber"></div>
 						</div>
-					</div>
+	
+						<div class="ClockBarMiddle Wrapper SlideDown ShowInIntermission ShowInLineUp ShowInTimeout Box BigName ClockDescription" sbDisplay="Clock(Intermission).Running, Clock.(Intermission).Number, Clock(Lineup).Running, Clock(Lineup).Name, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReviews, Team(1).Timeouts, Team(2).OfficialReviews, Team(2).Timeouts, /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.PreGame), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Intermission), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Unofficial), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rule(Period.Number)" sbModify="clockType"></div>
+						<div class="ClockBarBottom Wrapper Row BottomRow barBackgroundBottom">
+							<div class="Box TextLeft Time Clock Show ShowInJam ShowInLineup ShowInTimeout" sbContext="Clock(Period)" sbDisplay="Time" sbModify="toTime"></div>
+							<div class="Box BoxLarge TextCenter Time Clock ShowInIntermission" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
+							<div class="Box TextRight Time Clock Show ShowInJam" sbContext="Clock(Jam)" sbDisplay="Time" sbModify="toTime"></div>
+							<div class="Box TextRight Time Clock ShowInLineUp" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
+							<div class="Box TextRight Time Clock ShowInTimeout" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
+						</div>
+	
 				</div>
+	
 			</div>
-
-
-			<div data-setting="ScoreBoard.Settings.Setting(Overlay.Interactive.Clock)"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
-
-					<div class="ClockBarTop Wrapper Row SlideDown ClockNames ShowInJam ShowInLineup ShowInTimeout barBackgroundTop">
-						<div class="Box TextLeft Name" sbDisplay="Name,Number" sbContext="Clock(Period)" sbModify="toClockInitialNumber"></div>
-						<div class="Box TextRight Name" sbDisplay="Name,Number" sbContext="Clock(Jam)" sbModify="toClockInitialNumber"></div>
-					</div>
-
-					<div class="ClockBarMiddle Wrapper SlideDown ShowInIntermission ShowInLineUp ShowInTimeout Box BigName ClockDescription" sbDisplay="Clock(Intermission).Running, Clock.(Intermission).Number, Clock(Lineup).Running, Clock(Lineup).Name, Clock(Timeout).Name, Clock(Timeout).Running, TimeoutOwner, OfficialReviews, Team(1).Timeouts, Team(2).OfficialReviews, Team(2).Timeouts, Settings.Setting(ScoreBoard.Intermission.PreGame), Settings.Setting(ScoreBoard.Intermission.Intermission), Settings.Setting(ScoreBoard.Intermission.Unofficial), Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rulesets.CurrentRule(Period.Number)" sbModify="clockType"></div>
-					<div class="ClockBarBottom Wrapper Row BottomRow barBackgroundBottom">
-						<div class="Box TextLeft Time Clock Show ShowInJam ShowInLineup ShowInTimeout" sbContext="Clock(Period)" sbDisplay="Time" sbModify="toTime"></div>
-						<div class="Box BoxLarge TextCenter Time Clock ShowInIntermission" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
-						<div class="Box TextRight Time Clock Show ShowInJam" sbContext="Clock(Jam)" sbDisplay="Time" sbModify="toTime"></div>
-						<div class="Box TextRight Time Clock ShowInLineUp" sbContext="Clock(Lineup)" sbDisplay="Time" sbModify="toTime"></div>
-						<div class="Box TextRight Time Clock ShowInTimeout" sbContext="Clock(Timeout)" sbDisplay="Time" sbModify="toTime"></div>
-					</div>
-
-			</div>
-
-			</div>
-
+	
 			<div class="PanelWrapperCenter">
-
+	
 				<div class="ClockBox Wrapper OverlayPanel PanelHideBottom MediumPanel AnimatedPanel">
 						<div class="Wrapper Clock SlideDown ShowInIntermission ShowInLineUp ShowInTimeout">
-							<div class="Box BigName ShowInIntermission Clock" sbDisplay="Settings.Setting(ScoreBoard.Intermission.PreGame), Settings.Setting(ScoreBoard.Intermission.Intermission), Settings.Setting(ScoreBoard.Intermission.Unofficial), Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rulesets.CurrentRule(Period.Number)" sbModify="intermissionDisplay"></div>
+							<div class="Box BigName ShowInIntermission Clock" sbDisplay="/ScoreBoard.Settings.Setting(ScoreBoard.Intermission.PreGame), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Intermission), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Unofficial), /ScoreBoard.Settings.Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Rule(Period.Number)" sbModify="intermissionDisplay"></div>
 							<div class="Box BoxLarge TextCenter Time Clock ShowInIntermission" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
 						</div>
 				</div>
-
+	
 				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<h1>Points Per Jam</h1>
 					<h4 class="htop ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h4>
@@ -99,8 +99,8 @@
 						</div> </div>
 					<h4 class="hbottom ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h4>
 				</div>
-
-
+	
+	
 				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1 class="ColourTeam1" sbDisplay="AlternateName(overlay),Name" sbContext="Team(1)"></h1>
@@ -110,7 +110,7 @@
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
-
+	
 				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)"></h1>
@@ -120,7 +120,7 @@
 					<div class="Wrapper Team Team2 SortBox">
 					</div>
 				</div>
-
+	
 				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo1" src="" />
 					<h1>Penalty Board</h1>
@@ -130,7 +130,7 @@
 					<div class="Wrapper Team Team1 SortBox">
 					</div>
 				</div>
-
+	
 				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel NoLogo">
 					<img class="TeamLogo TeamLogo2" src="" />
 					<h1>Penalty Board</h1>
@@ -140,7 +140,7 @@
 					<div class="Wrapper Team Team2 SortBox">
 					</div>
 				</div>
-
+	
 				<div class="Upcoming PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
 					<div>
 						<img class="TeamLogo TeamLogo1" src="" style="float: left;" />
@@ -152,14 +152,15 @@
 						<h1 class="ColourTeam2" sbDisplay="AlternateName(overlay),Name" sbContext="Team(2)" style="margin-top: 2em; margin-left: 0; margin-right: 4em;"></h1>
 					</div>
 				</div>
-
+	
 			</div>
-
+	
 			<div class="PanelWrapperLeft">
 				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
-					<h4 class="Line1" sbDisplay="ScoreBoard.Settings.Setting(Overlay.Interactive.LowerThird.Line1)" /> <h5 class="Line2" sbDisplay="ScoreBoard.Settings.Overlay.Interactive.LowerThird.Line2" />
+					<h4 class="Line1" sbDisplay="Settings.Setting(Overlay.Interactive.LowerThird.Line1)" /> <h5 class="Line2" sbDisplay="Settings.Setting(Overlay.Interactive.LowerThird.Line2)" />
 				</div>
 			</div>
-
-	</div>
+	
+		</div>
+	</body>
 </html>
